# cuda-fp8-ampere

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/fp8imma/: imma_fp8.h
scripts/: bench_torch_vs_fp8imma.py  run_all.sh
src/: gpu_bench.cu  main.cu
src/bench/: bench_cutlass.inl  bench_fp8_quant_cublas.inl  bench_imma_custom.inl  bench_int8_cublaslt.inl  bench_lop3_wmma.inl  bench_misc.inl  cli.inl  preamble.inl
src/fp8imma/: fp8_lut.cu  fp8imma_internal.cuh  imma_fp8_cabi.cu  imma_fp8_kernels.cu  imma_fp8_v2.cu  imma_fp8_v3.cu  imma_fp8_v4.cu  imma_fp8_v4_texscale.cu
src/fp8imma/impl/: cabi_wrappers.inl  v2_kernels.inl  v3_kernels.inl  v4_kernels.inl  v4_texscale_kernels.inl
tests/: fp8imma_smoke.cu  torch_fp8imma_ext_smoke.py
torch_ext/fp8imma/: README.md  fp8imma_ext.cpp  setup.py
torch_ext/fp8wgt/: README.md  fp8_linear.py  fp8wgt_ext.cpp  fp8wgt_ext_cuda.cu  setup.py
